   on option to close specific MixMonitors.

 * The SIPshowpeer manager action response field "SIP-Forcerport" has been updated
   to include information about peers configured with nat=auto_force_rport by
   returning "A" if auto_force_rport is set and nat is detected, and "a" if it is
   set and nat is not detected. "Y" and "N" are still returned if auto_force_rport
   is not enabled.

FAX changes
-----------
 * FAXOPT(faxdetect) will enable a generic fax detect framehook for dialplan
   control of faxdetect.

DUNDi changes
-------------
 * Allow the built in variables ${NUMBER}, ${IPADDR} and ${SECRET} to be
   used within the dynamic weight attribute when specifying a mapping.

Core changes
------------
 * Each logging destination and console now have an independent notion of the
   current verbosity level.  Logger.conf now allows an optional argument to
   the 'verbose' specifier, indicating the level of verbosity sent to that
   particular logging destination.  Additionally, remote consoles now each
   have their own verbosity level.  The command 'core set verbose' will now set
   a separate level for each remote console without affecting any other
   console.

Dialplan functions
------------------
 * Addition of the VM_INFO function that can be used to retrieve voicemail
   user information, such as the email address and full name.
   The MAILBOX_EXISTS dialplan function has been deprecated in favour of
   VM_INFO.

Followme changes
-------------
 * A new option, 'I' has been added to app_followme.
   By setting this option, Asterisk will not update the caller with
   connected line changes when they occur.  This is similar to app_dial
   and app_queue.
 * The 'N' option is now ignored if the call is already answered.

RTP changes
-------------
 * A new option, 'probation' has been added to rtp.conf
   RTP in strictrtp mode can now require more than 1 packet to exit learning
   mode with a new source (and by default requires 4). The probation option